--- a/app/globals.css
+++ b/app/globals.css
@@ -4,5 +4,7 @@
 @tailwind utilities;
 
 body {
-  background-color: #b6c3c9;
+  background-color: white;
+  display: flex;
+  justify-content: center;
 }
